# emrys

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  PITCH.md  README.md  TERMS.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
contrib/: emrys-mcp.service
scripts/: record_demo.sh
src/cairn_ai/: CHECKSUMS.json  TRUST_KEY.pub  __init__.py  __main__.py  cli.py  db.py  integrity.py  journal.py  license.py  pq_identity.py  search.py  server.py  sovereign.py
src/emrys/: CHECKSUMS.json  __init__.py  __main__.py  backup.py  cli.py  db.py  ingest.py  integrity.py  journal.py  pq_identity.py  rotate.py  search.py  server.py  sovereign.py  trust.py
tests/: test_core.py  test_free_tier.py  test_integration.sh  test_integrity.py  test_paid_tier.py  test_stress.py
