[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cairn-ai"
version = "0.3.0"
description = "Persistent memory for AI agents — survive compaction, recover from crashes, maintain identity across sessions."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "NuAvalon" },
]
keywords = ["claude", "claude-code", "mcp", "memory", "agents", "persistence", "cairn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0",
    "click>=8.0",
]

[project.optional-dependencies]
vectors = ["sentence-transformers>=2.0", "numpy>=1.24"]

[project.scripts]
cairn = "cairn_ai.cli:main"

[project.urls]
Homepage = "https://github.com/NuAvalon/cairn-ai"
Documentation = "https://github.com/NuAvalon/cairn-ai#readme"
Issues = "https://github.com/NuAvalon/cairn-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cairn_ai"]
artifacts = ["src/cairn_ai/keys/*.bin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
