[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emrys"
version = "0.4.0"
description = "Persistent memory for AI coding agents — survive compaction, recover from crashes, maintain identity across sessions."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "NuAvalon" },
]
keywords = ["mcp", "memory", "agents", "persistence", "emrys", "claude", "cursor", "windsurf", "cline", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0",
    "click>=8.0",
]

[project.optional-dependencies]
vectors = ["sentence-transformers>=2.0", "numpy>=1.24"]
svrnty = ["cryptography>=42.0", "pqcrypto>=0.4.0"]
sovereign = ["cryptography>=42.0", "pqcrypto>=0.4.0"]  # alias

[project.scripts]
emrys = "emrys.cli:main"

[project.urls]
Homepage = "https://nuavalon.com"
Repository = "https://github.com/NuAvalon/emrys"
Documentation = "https://github.com/NuAvalon/emrys#readme"
Issues = "https://github.com/NuAvalon/emrys/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/emrys"]
artifacts = ["src/emrys/keys/*.bin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
